wifi-analyzer/build/log/idf_py_stdout_output_2648
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\HP\workspace\AuditWiFi\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/HP/workspace/AuditWiFi/build/bootloader/bootloader.bin"
Bootloader binary size 0x6850 bytes. 0x7b0 bytes (7%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/HP/workspace/AuditWiFi/build/config -IC:/Espressif/frameworks/esp-idf-v5.2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.2/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.2/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.2/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.2/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/driver/touch_sensor/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_phy/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/spiffs/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/spi_flash/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_http_server/include -IC:/Espressif/frameworks/esp-idf-v5.2/components/http_parser -IC:/Espressif/frameworks/esp-idf-v5.2/components/esp_http_client/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/HP/workspace/AuditWiFi=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/HP/workspace/AuditWiFi/main/main.c
C:/Users/HP/workspace/AuditWiFi/main/main.c: In function 'core0_task':
C:/Users/HP/workspace/AuditWiFi/main/main.c:36:25: error: implicit declaration of function 'ESP_LOGE'; did you mean 'ESP_OK'? [-Werror=implicit-function-declaration]
   36 |                         ESP_LOGE("MAIN", "Failed to initialize SPIFFS, halting");
      |                         ^~~~~~~~
      |                         ESP_OK
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
